--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 .vscode/settings.json
 googletest
+build/*
+CMakeFiles/*
+ALL_BUILD.vcxproj
+ALL_BUILD.vcxproj.filters
+INSTALL.vcxproj
+INSTALL.vcxproj.filters
+project1.sln
+RUN_TESTS.vcxproj
+RUN_TESTS.vcxproj.filters
+runUnitTests.vcxproj
+runUnitTests.vcxproj.filters
+ZERO_CHECK.vcxproj
+ZERO_CHECK.vcxproj.filters
+CTestTestfile.cmake
