Successfully merged updateEntry into sprint-2

--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,4 @@ Testing/Temporary/CTestCostData.txt
 Testing/Temporary/LastTest.log
 Testing/Temporary/LastTestsFailed.log
 tests.cpp
-a.exe
+*.exe
