--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,55 +1,21 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.10)
+project(GantoApi)
 
-########################################
-# Project setup
-########################################
-set(PROJECT_NAME project1)
-project(${PROJECT_NAME})
-# After project(..) is called, the following variables are available:
-# * PROJECT_SOURCE_DIR - Top level source directory for the project
-# * PROJECT_BINARY_DIR - Full path to build directory for project
-
-########################################
-# Set up the compiler flags
-########################################
-set(CMAKE_CXX_FLAGS "-g -Wall")
 set(CMAKE_CXX_STANDARD 17)
 
-########################################
-# Testing
-########################################
-# Options. Turn on with 'cmake -Dmyvarname=ON'.
-# option(BUILD_TESTS "Build all tests." ON) # Makes boolean 'test' available.
+# Include directories
+include_directories(${PROJECT_SOURCE_DIR})
 
-# google test is a git submodule for the project, and it is also cmake-based
-add_subdirectory(./googletest)
+# Include GoogleTest from the local clone
+add_subdirectory(googletest)
+include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+
+# Main GantoApi library
+add_library(GantoApi SHARED gantoApi.cpp)
+
+# Test executable
+add_executable(GantoApiTests tests.cpp)
+target_link_libraries(GantoApiTests GantoApi gtest gtest_main)
 
 enable_testing()
-# 
-# Include the gtest library. gtest_SOURCE_DIR is available due to
-# 'project(gtest)' above.
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
- 
-########################################
-# Test files
-########################################
-file(GLOB TEST_SRC_FILES ${PROJECT_SOURCE_DIR}/tests/*.cpp)
-
-########################################
-# Unit Tests
-########################################
-add_executable(runUnitTests ${TEST_SRC_FILES})
-
-########################################
-# Standard linking to gtest stuff.
-########################################
-target_link_libraries(runUnitTests gtest gtest_main)
-
-########################################
-# Extra linking for the project.
-########################################
-target_link_libraries(runUnitTests project1_lib)
-
-# This is so you can do 'make test' to see all your tests run, instead of
-# manually running the executable runUnitTests to see those specific tests.
-add_test(UnitTests runUnitTests)
+add_test(NAME GantoApiTests COMMAND GantoApiTests)
