--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ Testing/Temporary/LastTest.log
 Testing/Temporary/LastTestsFailed.log
 tests.cpp
 *.exe
+GantoApi.sln
+GantoApi.vcxproj
+GantoApi.vcxproj.filters
+GantoApiTests.vcxproj
+GantoApiTests.vcxproj.filters
+googletest
