--- a/burndownCharts/Description
+++ b/burndownCharts/Description
@@ -1,5 +1,7 @@
 The following folder contains our burndown charts.
+Week 3:
+No additional story points added.
 Week 4:
-No story points added.
+No additional story points added.
 Week 5: 
-11 story points added.
+11 story points added and completed.
