--- a/burndownCharts/Description
+++ b/burndownCharts/Description
@@ -5,3 +5,5 @@ Week 4:
 No additional story points added.
 Week 5: 
 11 story points added and completed.
+Week 6:
+No additional story points added.
