--- a/burndownCharts/Description
+++ b/burndownCharts/Description
@@ -7,3 +7,5 @@ Week 5:
 11 story points added and completed.
 Week 6:
 No additional story points added.
+Week 7: 
+No additional story points added.
